--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.115.5
-uvicorn[standard]==0.32.0
+uvicorn==0.32.0            # no [standard]
 
+# PaddleOCR 2.7 stack (lighter)
 paddleocr==2.7.0.3
 paddlepaddle==2.6.1
 
@@ -9,14 +10,9 @@ opencv-python-headless==4.10.0.84
 numpy==1.26.4
 Pillow==10.4.0
 
-# PDF rasterization
-PyMuPDF==1.20.2
+# PDF rasterization (pure wheel; no apt/poppler)
+PyMuPDF==1.24.8
 
-# FastAPI extras for uploads / async files
+# FastAPI uploads/extras
 python-multipart==0.0.9
-aiofiles==23.2.1
-
-# Pydantic (FastAPI v0.115 uses pydantic v2)
 pydantic==2.9.2
-
-pdf2image>=1.17.0
